# horrible-man-messaging-service

./: api.dockerfile  build.sh  pyproject.toml  run.sh
api/: Makefile  pyproject.toml
api/src/msg_app/: app.py
frontend/: Dockerfile  Makefile  build.sh  package-lock.json  package.json  run.sh
frontend/src/routes/: +page.svelte
src/: run.py
src/msg_app/: app.py
